--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
   {% if site.favicon %}<link rel="shortcut icon" href="{{ site.favicon }}" type="image/x-icon">{% endif %}
 	{% if site.touch_icon %}<link rel="apple-touch-icon" href="{{ site.touch_icon }}">{% endif %}
+  <!-- added by mano -->
+  {% if site.image %}<meta content= {{site.image}} property="og:image">{% endif %}
 </head>
 <body>
   <div id="main">
