--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
   {% if site.favicon %}<link rel="shortcut icon" href="{{ site.favicon }}" type="image/x-icon">{% endif %}
 	{% if site.touch_icon %}<link rel="apple-touch-icon" href="{{ site.touch_icon }}">{% endif %}
   <!-- added by mano -->
-  {% if site.image %}<meta property="og:image" content= "{{site.url}}/{{site.image}}">{% endif %}
+  <!-- {% if site.image %}<meta property="og:image" content= "{{site.url}}/{{site.image}}">{% endif %} -->
+
+  <meta property="og:site_name" content="{{site.title}}">
+  <meta property="og:title" content="{{site.title}}" />
+  <meta property="og:description" content="{{site.description}}" />
+  <meta property="og:image" itemprop="image" content="{{site.url}}/{{site.image}}">
+  <meta property="og:type" content="website" />
+  <!-- <meta property="og:updated_time" content="1440432930" /> -->
 </head>
 <body>
   <div id="main">
